--- a/SDKTest/AndroidManifest.xml
+++ b/SDKTest/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:targetSdkVersion="15" />
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_LOGS" />
     
     <application
         android:icon="@drawable/ic_launcher"
