--- a/URQANative/AndroidManifest.xml
+++ b/URQANative/AndroidManifest.xml
@@ -7,7 +7,9 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="15" />
     
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/> 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET"/> 
     
 
     <application
